apps/argo-apps/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    istio-injection: disabled
